# Termi

./: .gitignore  README.md  README.txt  pyproject.toml  setup.sh
src/: cli.py
src/termi/: __init__.py  cli.py  config.py  context.py  fallback.py  history.py  llm.py  safety.py  themes.py
tests/: conftest.py  test_termi.py
